--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-Privacy Policy
-Last updated: February 17, 2024
-
-This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.
-
-We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Privacy Policy Generator.
+Describes Our policies and procedures on the collection.
