--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Describes Our policies and procedures on the collection.
+Privacy Policy
+
+Effective Date: February 17, 2024
+
+Introduction
+NextSquareStudio ("we", "us", or "our") offers this video game as a paid service and respects the privacy of our players ("you"). This Privacy Policy outlines our policies regarding the collection, use, and disclosure of information when you purchase and play our game.
+
+Data Collection
+We do not collect any personal data directly within our game. Our game is a paid product, and all transactions are processed through the platform you purchase from (e.g., Google Play, App Store, Steam), which may collect personal information as required for transaction processing and other platform services.
+
+Use of Information
+Since we do not collect personal data, we do not use any such information for any purpose.
+
+Third-Party Services
+The platforms on which our game is available may collect information necessary for purchase and download. Please review their privacy policies to understand their practices, as we do not have control over data collected by these platforms.
+
+Data Security
+We are committed to ensuring the security of our game and take reasonable steps to protect the integrity of the game itself. However, we do not store or process your data.
+
+Children's Privacy
+Our game does not knowingly collect any information from children under the age of 13.
+
+Changes to This Policy
+We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes, we will notify you as required by law.
+
+Contact Us
+If you have any questions about this Privacy Policy, please contact us at gameartstd@gmail.com
