--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>We may update this Privacy Policy from time to time to reflect changes in our information practices or relevant laws. We will notify you of any material changes by posting the new Privacy Policy on our website or within our game. You are advised to review this Privacy Policy periodically for any changes.</p>
         
         <h2>7. Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy or our practices, please contact us at <a href="mailto:gameartstd@gmail.com">gameartstd@gmail.com</a>.</p>
+        <p>If you have any questions or concerns about this Privacy Policy or our practices, please contact us at <a href="mailto:nextsquarestudio@gmail.com">nextsquarestudio@gmail.com</a>.</p>
     </div>
     <div class="footer">
         &copy; 2024 NextSquareStudio. All rights reserved.
